Fixed broken layout

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -1,6 +1,5 @@
 .home {
   &-wrapper {
-    padding: 5px;
     &-inner {
       display: grid;
       grid-template-rows: 164px 806px;
